<resources>
    <string name="app_name">Quote_lecture</string>
    <string name="quotes">quotes</string>
    <string name="every_eforts_count">every eforts count</string>
    <string name="author">Author</string>
    <string name="next_quote">next quote</string>
    <string name="add_quote">Add quote</string>
    <string name="enter_the_quote_and_author">Enter the quote and author</string>
    <string name="quote">Quote</string>
    <string name="add_quoation">Add Quoation</string>
    <string name="test_button">test button</string>
</resources>
