<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16sp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.327"
            android:textColor="@android:color/black" android:text="@string/quotes" android:padding="10dp"/>
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/quote"
              android:text="@string/every_eforts_count"
              android:gravity="center" android:layout_marginTop="100dp"
              android:textSize="16sp"
              android:textColor="@android:color/black"/>
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/author"
              android:text="@string/author"
              android:textColor="@android:color/black"
              android:gravity="center" android:padding="10dp"
              android:textSize="16sp"/>
    <Button
            android:text="@string/next_quote"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/nextQuote"
    android:padding="10dp"/>
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/add_quote"
            android:layout_gravity="center"
            tools:layout_margin="50dp" android:id="@+id/AddQuote"></Button>
</LinearLayout>