<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddQuote" android:id="@+id/linearLayout">

    <TextView
            android:text="@string/enter_the_quote_and_author"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView11"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/quote"
            android:ems="10"
            android:id="@+id/getQuote"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView11"
            app:layout_constraintEnd_toEndOf="parent" android:autofillHints=""/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/author"
            android:ems="10"

            android:id="@+id/getAuthor"
            app:layout_constraintTop_toTopOf="@+id/getQuote" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="45dp" app:layout_constraintEnd_toEndOf="parent" android:autofillHints=""/>
    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_quote"
            android:id="@+id/button" app:layout_constraintStart_toStartOf="@+id/getAuthor"
            app:layout_constraintTop_toBottomOf="@+id/getAuthor" android:layout_marginTop="312dp"
            android:layout_marginStart="152dp"
    android:onClick="letsAddWord"/>

</android.support.constraint.ConstraintLayout>